# printer

./: .gitignore  AGENTS.md  INTEGRATION.md  Makefile  README.md
.heyo/workflows/: printer.yml
.opencode/agent/: codegraph.md
.opencode/command/: cg-def.md  cg-outline.md  cg-refs.md
.poolside/: settings.local.yaml
.printer/: exec.json  history.json  plan.checkpoint
.printer/exec/: 009-recursive-print-3d0a7fc1.json
.printer/followups/: 004-heyvm-plugin-hooks.md  006-feat-acp-and-heyvm.md  007-testing-pass.md  009-recursive-print.md
.printer/tasks/: T-001.md  T-002.md  T-003.md  T-004.md  T-005.md  T-006.md  T-007.md  T-008.md  T-009.md  T-010.md  T-011.md  T-012.md  T-013.md  T-014.md  T-015.md  T-016.md  T-017.md  T-018.md  T-019.md  T-020.md  T-021.md  T-022.md  T-023.md  T-024.md  T-025.md  T-026.md  T-027.md  T-028.md  T-029.md  T-030.md  T-031.md  T-032.md  T-033.md  T-034.md  T-035.md  T-036.md  T-037.md  T-038.md
books/: README.md  ux.spec
books/src/: app.rs  storage.rs
books/src-tauri/: tauri.conf.json
codegraph/: Cargo.toml  README.md
codegraph/src/: cli.rs  index.rs  languages.rs  lib.rs  main.rs  mcp.rs  outline.rs  output.rs  parse.rs  patch.rs  search.rs  snippet.rs  symbols.rs  watch.rs
codegraph/tests/: mcp.rs
computer/: Cargo.toml  README.md
computer/src/: input.rs  main.rs  mcp.rs
computer/src/platform/: keymap_common.rs  mod.rs  types.rs
computer/src/platform/linux/: browse.rs  input.rs  keymap.rs  mod.rs  screenshot.rs  windows.rs
computer/src/platform/macos/: browse.rs  input.rs  keymap.rs  mod.rs  outputs.rs  perms.rs  screenshot.rs  windows.rs
computer/src/wayland/: mod.rs  outputs.rs
computer/tests/: mcp.rs
do-skills/xdotool/: SKILL.md
examples/books/: Cargo.toml  styles.css
examples/fremont-fishing/: .gitignore  index.html  package-lock.json  package.json  spec.md
plugins/acp-runtime/: README.md  printer-plugin.toml
plugins/codegraph-claude/: README.md
plugins/codegraph-opencode/: README.md  (+1 more)
printer/: Cargo.toml  HOOKS.md  README.md
specs/: 001-improve-review.md  002-planning-stages.md  003-followups.md  004-heyvm-plugin-hooks.md  005-test-browser-and-cli.md  006-feat-acp-and-heyvm.md  007-testing-pass.md  008-rmxdotool.md  009-recursive-print.md  010-efficiency-pass.md
(+93 files in other folders)
