[package]
name = "computer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "computer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Wayland
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }

# Shared memory + image encoding
memmap2 = "0.9"
rustix = { version = "1", features = ["fs", "shm", "mm"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Input synthesis (uinput)
evdev = "0.13"
